# firehose-receiver

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.yaml
src/: handler.rs  kinesis.rs  logs.rs  main.rs  metrics.rs  traces.rs
