[package]
name = "kinesis-handler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A very simple Kinesis receiver that converts Kinesis records into OpenTelemetry Logs/Metrics/Traces."

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
http-body-util = "0.1.3"
opentelemetry-proto = "0.28.0"
prost = "0.13.5"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tonic = "0.12.3"
tower = "0.5.2"
